--- a/generations/novee-lead-gen/apps/desktop/src/renderer/index.html
+++ b/generations/novee-lead-gen/apps/desktop/src/renderer/index.html
@@ -14,9 +14,44 @@
           <span class="logo-icon">O</span>
           <span class="logo-text">NOVEE</span>
         </div>
+        <div id="user-info" class="user-info hidden">
+          <span id="user-name" class="user-name"></span>
+          <button id="logout-btn" class="btn btn-secondary btn-small">Logout</button>
+        </div>
       </header>
 
-      <main class="main">
+      <!-- Login View -->
+      <main id="login-view" class="main">
+        <div class="container login-container">
+          <h1>Sign in to Novee</h1>
+          <p class="subtitle">Use your Novee account credentials</p>
+
+          <form id="login-form" class="login-form">
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required placeholder="you@example.com" autocomplete="email" />
+            </div>
+
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" id="password" name="password" required placeholder="••••••••" autocomplete="current-password" />
+            </div>
+
+            <div id="login-error" class="error-message hidden"></div>
+
+            <button type="submit" id="login-btn" class="btn btn-primary btn-full">
+              Sign In
+            </button>
+          </form>
+
+          <p class="login-hint">
+            Don't have an account? Create one at <a href="#" id="web-app-link">novee.io</a>
+          </p>
+        </div>
+      </main>
+
+      <!-- Dashboard View (hidden by default) -->
+      <main id="dashboard-view" class="main hidden">
         <div class="container">
           <h1>Welcome to Novee Desktop</h1>
           <p class="subtitle">Connect your platforms to start finding leads</p>
