Enhance Novee Lead Generation Platform with comprehensive regression testing and feature verification. Update application status to reflect 100% feature coverage across all sessions. Implement browser fingerprint collection for user tracking and improve platform connection management with new API routes. Ensure all features are functioning correctly and maintain clean code practices.

--- a/generations/novee-lead-gen/apps/desktop/src/renderer/index.html
+++ b/generations/novee-lead-gen/apps/desktop/src/renderer/index.html
@@ -45,7 +45,7 @@
           </form>
 
           <p class="login-hint">
-            Don't have an account? Create one at <a href="#" id="web-app-link">novee.io</a>
+            Don't have an account? Create one at <a href="#" id="web-app-link">novee.tech</a>
           </p>
         </div>
       </main>
@@ -65,6 +65,7 @@
                   <div>
                     <span class="platform-name">Slack</span>
                     <span id="slack-status" class="platform-status status-disconnected">Not Connected</span>
+                    <span id="slack-last-scrape" class="platform-last-scrape hidden"></span>
                   </div>
                 </div>
                 <div class="platform-actions">
